# JustGlow

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  GPU_RENDERING_ISSUE_REPORT.md  PROJECT_STATUS.txt  SESSION_NOTES.md
.claude/: hookify.build-check-before-commit.local.md  karis_average_backup.cu
.claude/skills/: gpu-feature-planner.md  gpu-plan-template.md
.github/workflows/: build-macos.yml.bak  build.yml
archive/: JustGlowInterop_Reference.cpp  JustGlowKernels_Experimental.cu  JustGlowKernels_Surface.cu  README.md
docs/: AE_GPU_CUDA_TROUBLESHOOTING.md  ALGORITHM.md  ALPHA_BLEND_FORMULA.md  CODE_REVIEW_REPORT.md  COMPOSITE_LOGIC_ANALYSIS.md  CUDA_IMPLEMENTATION.md  GPU_BOTTLENECK_ANALYSIS.md  LINEARIZATION_AND_ALPHA_HANDLING.md  UNMULT_REFERENCE.md  alpha-calculation-detail.html  blend-mode-alpha-detail.html  composite-flowchart.html  glow-buffer-detail.html
docs/plans/: PLAN_DX12_CUDA_INTEROP.md  PLAN_HYBRID_DX_CUDA.md
include/: AE_SDK
mcp-upload/: AE_GPU_SDK_REFERENCE.md
resources/: JustGlowPiPL.r
resources/Win/: JustGlow.def  JustGlow.rc  JustGlow.rc.in
shaders/: Common.hlsli  Composite.hlsl  Downsample.hlsl  PostProcess.hlsl  Prefilter.hlsl  Refine.hlsl  ScreenBlend.hlsl  Upsample.hlsl
src/: JustGlow.cpp  JustGlow.h  JustGlowCUDARenderer.cpp  JustGlowCUDARenderer.h  JustGlowGPURenderer.cpp  JustGlowGPURenderer.h  JustGlowInterop.cpp  JustGlowInterop.h  JustGlowKernels.cu  JustGlowParams.h
